# F1-project

./: .env.example  .gitignore  .npmrc  .prettierignore  CLAUDE.md  README.md  eslint.config.mjs  f1-projekt-plan.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
.specify/: constitution.md  template-plan.md  template-spec.md  template-tasks.md
apps/dashboard/: .env.example  next.config.mjs  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/predictor/: .env.example  next.config.mjs  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  (+1 more)
docs/: openf1-notes.md  phase-2-deploy.md  retraining-runbook.md
infra/: cdk.json  package.json  tsconfig.json  vitest.config.ts
ml/: README.md  pyproject.toml
ml/fixtures/openf1/11291/: intervals.json  laps.json  position.json  session.json  stints.json  weather.json
ml/notebooks/: train_podium_model.ipynb
ml/scripts/: backfill_practice.py  fetch_fixtures.py  run_inference_local.py
ml/src/f1pred/: __init__.py  artifact.py  aws_io.py  bedrock_prompt.py  data.py  ddb_keys.py  evaluate.py  explain.py  features.py  inference.py  inference_handler.py  layout.py  pipeline.py  schema.py  split.py  target.py  train.py
ml/tests/: conftest.py  test_artifact.py  test_aws_io.py  test_bedrock_prompt.py  test_data.py  test_ddb_keys.py  test_evaluate.py  test_explain.py  test_features.py  test_inference.py  test_inference_handler.py  test_layout.py  test_pipeline.py  test_schema.py  test_smoke.py  test_split.py  test_target.py  test_train.py
(+174 files in other folders)
